[package]
name = "quiche_apps"
version = "0.1.0"
authors = ["Lucas Pardue <lucaspardue.24.7@gmail.com>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiche/sfv"]

default = ["qlog", "sfv"]

[dependencies]
docopt = "1"
env_logger = "0.10"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = "0.4"
octets = { version = "0.3", path = "../octets" }
ring = "0.17"
quiche = { path = "../quiche", features = ["boringssl-boring-crate"] }
libc = "0.2"
nix = { version = "0.27", features = ["net", "socket", "uio"] }
base64 = "0.22.1"
boring = "4.10.3"

[lib]
crate-type = ["lib"]
